--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Amp.Amp
-EditorStartupMap=/Game/Amp.Amp
+GameDefaultMap=/Game/Untitled.Untitled
+EditorStartupMap=/Game/Untitled.Untitled
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
